--- a/pixelpart.hdrp/package.json
+++ b/pixelpart.hdrp/package.json
@@ -1,9 +1,10 @@
 {
     "name": "net.pixelpart.hdrp",
     "version": "1.8.0",
-    "description": "HDRP materials for the Pixelpart runtime plugin.",
     "displayName": "Pixelpart HDRP",
+    "description": "HDRP materials for the Pixelpart runtime plugin.",
     "unity": "2021.3",
+    "documentationUrl": "https://pixelpart.net/documentation/unity/",
     "author": {
         "name": "Sören Möllers"
     },
