--- a/pixelpart.urp/package.json
+++ b/pixelpart.urp/package.json
@@ -1,9 +1,10 @@
 {
     "name": "net.pixelpart.urp",
     "version": "1.8.0",
-    "description": "URP materials for the Pixelpart runtime plugin.",
     "displayName": "Pixelpart URP",
+    "description": "URP materials for the Pixelpart runtime plugin.",
     "unity": "2021.3",
+    "documentationUrl": "https://pixelpart.net/documentation/unity/",
     "author": {
         "name": "Sören Möllers"
     },
